--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       </h1>
       <div class="col-12"></div>
         <label for="AB">Adultos (que consomem bebidas alcoólicas).........:</label>
-        <input type="number" name="numero" id="adultobebe">
+        <input type="number" name="numero" id="adultobebe" min="0">
     </div>
 
     <div class="col-12">
-      <label for="ANB">Adultos (que não consomem bebidas alcoólicas)...:</label>
-      <input type="number" name="numero" id="adultonbebe">
+      <label for="ANB">Adultos (que não consomem bebidas alcoólicas)..:</label>
+      <input type="number" name="numero" id="adultonbebe" min="0">
     </div>
 
     <div class="col-12">
-      <label for="C">Crianças................................................................:</label>
-      <input type="number" name="numero" id="crianca">
+      <label for="C">Crianças...............................................................:</label>
+      <input type="number" name="numero" id="crianca" min="0">
     </div>
     <!-- Conta resultado -->
 
