--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <table>
         <thead>
           <tr>
-            <th>Item</th>
-            <th>Por adulto</th>
-            <th>Por criança</th>
+            <th id="t">Item</th>
+            <th id="t">Por adulto</th>
+            <th id="t">Por criança</th>
           </tr>
         </thead>
         <tbody>
