--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
 
     <hr>
     <h1>Total da Conta:</h1>
+    <div id="carne">
+      Carne:
+    </div>
+    <div id="acompanhamento">
+      Acompanhamento:
+    </div>
+    <div id="cerveja">
+      Cerveja:
+    </div>
+    <div id="refrigerante">
+      Refrigerante:
+    </div>
+    <div id="água">
+      Água:
+    </div>
+
 
 
     <script src="index.js"></script>
